Shadow Terminator Geometry Offset causes artifacts for translucent shader (Cycles) #93418

Closed
opened 2021-11-26 23:33:06 +01:00 by slowburn · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-22 23:57, hash: d1a4e043bd
Worked: (newest version of Blender that worked as expected)

Short description of error
If object has smooth shading and Geometry Offset enabled, then shadows visible through the surface, due to translucent shader, appear broken up. The intensity of this effect depends on how irregular the shape is. In these examples there is a sphere casting a shadow on the other side of the object.
geo offset_bug.jpg
How it should look:
geo offset_disabled.jpg

Exact steps for others to reproduce the error

  • Add a translucent shader to an object
  • Enable smooth shading and Geometry Offset
  • Add another object that would cast clear shadow on the surface of the first object

geo_offset_bug.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-22 23:57, hash: `d1a4e043bd` Worked: (newest version of Blender that worked as expected) **Short description of error** If object has smooth shading and Geometry Offset enabled, then shadows visible through the surface, due to translucent shader, appear broken up. The intensity of this effect depends on how irregular the shape is. In these examples there is a sphere casting a shadow on the other side of the object. ![geo offset_bug.jpg](https://archive.blender.org/developer/F12344937/geo_offset_bug.jpg) How it should look: ![geo offset_disabled.jpg](https://archive.blender.org/developer/F12344941/geo_offset_disabled.jpg) **Exact steps for others to reproduce the error** - Add a translucent shader to an object - Enable smooth shading and Geometry Offset - Add another object that would cast clear shadow on the surface of the first object [geo_offset_bug.blend](https://archive.blender.org/developer/F12345104/geo_offset_bug.blend)
Author

Added subscriber: @slowburn

Added subscriber: @slowburn
Member

Added subscribers: @ktdfly, @Alaska

Added subscribers: @ktdfly, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm the issue however I'm not entirely sure if this is a bug or an artifact that's expected of the geometry offset. @ktdfly are you able to comment on this?

I can confirm the issue however I'm not entirely sure if this is a bug or an artifact that's expected of the geometry offset. @ktdfly are you able to comment on this?

In general, this kind of artifacts is expected (saddle points on geometry, smooth normals are parallel and have a big enough angle from geometry normals), although I know how it can be improved for this specific case (looking from behind by using the translucent bsdf), so I'd call it a bug.

In general, this kind of artifacts is expected (saddle points on geometry, smooth normals are parallel and have a big enough angle from geometry normals), although I know how it can be improved for this specific case (looking from behind by using the translucent bsdf), so I'd call it a bug.

This issue was referenced by blender/cycles@994fe98ab5

This issue was referenced by blender/cycles@994fe98ab52382fd6eb577bd7d5653681ae6931d

This issue was referenced by 4c8740a452

This issue was referenced by 4c8740a45217fc9cc5c4f668695cdf6e7d446ec1

This issue was referenced by a92805bf24

This issue was referenced by a92805bf24f52e1764a5f930bbe9e4e8fcc7e24d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-12-07 19:02:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93418
No description provided.