Fix T93418: Cycles shadow terminator Geometry Offset artifacts with translucency

Differential Revision: https://developer.blender.org/D13468